[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/assets/PlayerSelect.gd" type="Script" id=1]

[node name="PlayerSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 43.0
text = "1"

[node name="Button2" type="Button" parent="."]
margin_left = 64.0
margin_right = 94.0
margin_bottom = 43.0
text = "2"

[node name="Button3" type="Button" parent="."]
margin_left = 128.0
margin_right = 158.0
margin_bottom = 43.0
text = "3"

[node name="Button4" type="Button" parent="."]
margin_left = 192.0
margin_right = 222.0
margin_bottom = 43.0
text = "4"

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
